Fix search container overflow

--- a/src/controller/app/components/search/search-container.component.sass
+++ b/src/controller/app/components/search/search-container.component.sass
@@ -1,4 +1,9 @@
 .container
   height: 100%
-  .columns
-    height: 100%
+  display: flex
+  flex-direction: column
+  // .columns
+  //   height: 100%
+  >div.search-result
+    flex: 1
+    overflow: scroll
